[package]
name = "rldr"
version = "0.0.1"
edition = "2021"
authors = ["Ammar Ahmed <ammar.ahmed2203@gmail.com>"]
description = "A simple command line utility to run and manage commands with keypress controls."
license = "MIT"
repository = "https://github.com/ammar-ahmed22/rldr"
keywords = ["reloader", "CLI", "command"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
libc = "0.2.162"
log = "0.4.22"
